Add Templates folder for footer and header includes.

--- a/production/welcome.html
+++ b/production/welcome.html
@@ -12,22 +12,22 @@
     <meta name="description" content="Welcome Screen for SalesForce" />
     <meta name="author" content="Tippie College of Business" />
 
-    <title>Tippie Student Portal - Welcome</title>
+    <title>Tippie Student Portal - Enrollment RX Welcome Hi!Hi! </title>
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <!-- CSS -->
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/site.css" type="text/css" media="all" />
-    <!--<link rel="stylesheet" href="css/print.css" type="text/css" media="print" /> -->
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+<!-- CSS -->
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/site.css" type="text/css" media="all" />
+<!--<link rel="stylesheet" href="css/print.css" type="text/css" media="print" /> -->
 
-    <script src="js/site.js"></script>
+<script src="js/site.js"></script>
 
-    <noscript>
-        <style>
-            body { opacity: 1; }
-        </style>
-    </noscript>
+<noscript>
+    <style>
+        body { opacity: 1; }
+    </style>
+</noscript>
 </head>
 
 <body class="fs-grid shifter" id="top">
@@ -35,35 +35,35 @@
 
 
 
-   <header id="header" role="banner" class="clearfix">
+    <header id="header" role="banner" class="clearfix">
+
+        <div class="fs-row">
+            <div class="fs-cell fs-lg-full fs-md-4 fs-sm-full">
+                <div class="left">
+                    <a href="http://www.uiowa.edu/"><img src="images/ui-logo.png" class="ui-logo" alt="The University of Iowa"></a>
+                </div>
+
+                <a href="http://tippie.uiowa.edu"><img src="images/cob-logo.png" alt="Tippie College of Business" class="logo"></a>
+
+            </div>
+        </div>
+
+        <h5 id="nav_handle_1" class="navigation-handle">Navigation</h5>
+        <nav id="navigation" class="navigation" role="navigation" aria-label="Main menu" data-navigation-handle="#nav_handle_1">
 
             <div class="fs-row">
-                <div class="fs-cell fs-lg-full fs-md-4 fs-sm-full">
-                    <div class="left">
-                        <a href="http://www.uiowa.edu/"><img src="images/ui-logo.png" class="ui-logo" alt="The University of Iowa"></a>
-                    </div>
-
-                    <a href="http://tippie.uiowa.edu"><img src="images/cob-logo.png" alt="Tippie College of Business" class="logo"></a>
-
-                </div>
-            </div>
-
-            <h5 id="nav_handle_1" class="navigation-handle">Navigation</h5>
-            <nav id="navigation" class="navigation" role="navigation" aria-label="Main menu" data-navigation-handle="#nav_handle_1">
-
-                <div class="fs-row">
-                    <div class="fs-cell all-full">
-                        <div class="table" role="menubar">
-                            <div class="td">
-                                <a href="#" class="item" role="menuitem">Home</a>
-                                <a href="#" class="item" role="menuitem">My Profile</a>
-                                <a href="#" class="item" role="menuitem">My Application</a>
-                            </div>
+                <div class="fs-cell all-full">
+                    <div class="table" role="menubar">
+                        <div class="td">
+                            <a href="#" class="item" role="menuitem">Home</a>
+                            <a href="#" class="item" role="menuitem">My Profile</a>
+                            <a href="#" class="item" role="menuitem">My Application</a>
                         </div>
                     </div>
                 </div>
-            </nav>
-   </header>
+            </div>
+        </nav>
+    </header>
 
     <section class="page">
         <div class="fs-row">
@@ -114,66 +114,64 @@
 
             </div>
         </div>
+    </section>
 
+<footer id="footer">
+    <section role="navigation">
 
-   <footer id="footer">
-        <section role="navigation">
+        <div class="fs-row">
+            <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
 
-            <div class="fs-row">
-                <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
-
-                    <h4>Programs</h4>
-                    <div class="fs-row">
-                        <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
-                            <a href="http://tippie.uiowa.edu/undergraduate/">Undergraduate Programs</a>
-                            <a href="http://tippie.uiowa.edu/programs/">Master's Programs</a>
-                            <a href="http://tippie.uiowa.edu/mba/">MBA Programs</a>
-                            <a href="http://tippie.uiowa.edu/programs/">Certificates</a>
-                        </div>
-                        <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
-                            <a href="http://cimbaitaly.com/mba/">CIMBA Studdy Abroad</a>
-                            <a href="http://tippie.uiowa.edu/executive-education/">Professional & Executive Education</a>
-                            <a href="http://www.iowajpec.org/">Entrepreneurship</a>
-                            <a href="http://tippie.uiowa.edu/phd/">PhD Programs</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="fs-cell fs-sm-full fs-md-half fs-lg-5 centered">
-                    <div class="footer-logo">
-                        <a href="http://tippie.uiowa.edu/"><img src="images/tcob-logo-transp.png" alt="Tippie College of Business"></a>
-                    </div>
-                </div>
-
-                <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
-                    <p class="address">Henry B. Tippie College of Business<br>
-                        108 John Pappajohn Business Building<br>
-                        Iowa City, IA 52242-1994<br>
-                        <span class="phone-number">319-335-0862/800-553-4692</span><br>
-                        <a href="mailto:tippie-business@uiowa.edu">tippie-business@uiowa.edu</a>
-                    </p>
-                </div>
-
-            </div>
-
-
+                <h4>Programs</h4>
                 <div class="fs-row">
-                    <section id="postfooter">
-                    <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
-                        <div class="copyright">&copy; Copyright 2015 Henry B. Tippie College of Business</div>
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
+                        <a href="http://tippie.uiowa.edu/undergraduate/">Undergraduate Programs</a>
+                        <a href="http://tippie.uiowa.edu/programs/">Master's Programs</a>
+                        <a href="http://tippie.uiowa.edu/mba/">MBA Programs</a>
+                        <a href="http://tippie.uiowa.edu/programs/">Certificates</a>
                     </div>
-                    <div class="fs-cell fs-sm-full fs-md-full fs-lg-8">
-                        <a href="http://www.uiowa.edu" target="_blank">University of Iowa</a>
-                        <a href="http://www.uiowa.edu/a-z" target="_blank">UI A to Z Index</a>
-                        <a href="mailto:business-webmaster@uiowa.edu" target="_blank">Comments/Questions</a>
-                        <a href="http://www.uiowa.edu/homepage/online-privacy-information" target="_blank">Privacy Statement</a>
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
+                        <a href="http://cimbaitaly.com/mba/">CIMBA Studdy Abroad</a>
+                        <a href="http://tippie.uiowa.edu/executive-education/">Professional & Executive Education</a>
+                        <a href="http://www.iowajpec.org/">Entrepreneurship</a>
+                        <a href="http://tippie.uiowa.edu/phd/">PhD Programs</a>
                     </div>
-                </section>
+                </div>
             </div>
-        </section>
-   </footer>
 
-   </section>
+            <div class="fs-cell fs-sm-full fs-md-half fs-lg-5 centered">
+                <div class="footer-logo">
+                    <a href="http://tippie.uiowa.edu/"><img src="images/tcob-logo-transp.png" alt="Tippie College of Business"></a>
+                </div>
+            </div>
+
+            <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
+                <p class="address">Henry B. Tippie College of Business<br>
+                    108 John Pappajohn Business Building<br>
+                    Iowa City, IA 52242-1994<br>
+                    <span class="phone-number">319-335-0862/800-553-4692</span><br>
+                    <a href="mailto:tippie-business@uiowa.edu">tippie-business@uiowa.edu</a>
+                </p>
+            </div>
+
+        </div>
+
+
+        <div class="fs-row">
+            <section id="postfooter">
+                <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
+                    <div class="copyright">&copy; Copyright 2015 Henry B. Tippie College of Business</div>
+                </div>
+                <div class="fs-cell fs-sm-full fs-md-full fs-lg-8">
+                    <a href="http://www.uiowa.edu" target="_blank">University of Iowa</a>
+                    <a href="http://www.uiowa.edu/a-z" target="_blank">UI A to Z Index</a>
+                    <a href="mailto:business-webmaster@uiowa.edu" target="_blank">Comments/Questions</a>
+                    <a href="http://www.uiowa.edu/homepage/online-privacy-information" target="_blank">Privacy Statement</a>
+                </div>
+            </section>
+        </div>
+    </section>
+</footer>
 
 <a href="#0" class="back-top"><i class="fa fa-chevron-up fa-2x"></i></a>
 </section>
