Add pages for Log In, Application with links, New Application. Added css for forms and buttons.

--- a/production/welcome.html
+++ b/production/welcome.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Welcome Screen for SalesForce" />
     <meta name="author" content="Tippie College of Business" />
 
-    <title>Tippie Student Portal - Enrollment RX Welcome Hi!Hi! </title>
+    <title>Welcome - Tippie Student Portal</title>
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
