Removes logo image from footer, re-align.

--- a/production/app-interior-link.html
+++ b/production/app-interior-link.html
@@ -78,15 +78,15 @@
 
                         <div class="styled-control-group">
                             <label for="firstName">First Name</label>
-                            <input id="firstName" type="text" placeholder="First Name" class="styled-input-full">
+                            <input id="firstName" type="text" placeholder="First Name" class="styled-input-half">
                         </div>
                         <div class="styled-control-group">
                             <label for="middleName">Middle Name</label>
-                            <input id="middleName" type="text" placeholder="Middle Name" class="styled-input-full">
+                            <input id="middleName" type="text" placeholder="Middle Name" class="styled-input-half">
                         </div>
                         <div class="styled-control-group">
                             <label for="lastName">Last Name</label>
-                            <input id="lastName" type="text" placeholder="Last Name" class="styled-input-full">
+                            <input id="lastName" type="text" placeholder="Last Name" class="styled-input-half">
                         </div>
 
                         <p class="styled-form-message">List other Last Name(s) or Surname(s), if any, that may appear
@@ -94,7 +94,7 @@
 
                         <div class="styled-control-group">
                             <label for="otherName">Other Last Name(s) or Surname(s)</label>
-                            <input id="otherName" type="text" placeholder="Other Names" class="styled-input-full">
+                            <input id="otherName" type="text" placeholder="Other Names" class="styled-input-half">
                             <a href="#" class="styled-controls styled-form-message-block">Add more</a>
 
                         </div>
@@ -105,7 +105,7 @@
                     <fieldset>
                         <div class="styled-control-group">
                             <label for="citizenship">Country of Citizenship</label>
-                            <input id="citizenship" type="text" placeholder="Citizenship" class="styled-input-full">
+                            <input id="citizenship" type="text" placeholder="Citizenship" class="styled-input-half">
                         </div>
 
                         <div class="styled-control-group">
@@ -136,18 +136,18 @@
     <section role="navigation">
 
         <div class="fs-row">
-            <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
+            <div class="fs-cell fs-sm-full fs-md-full fs-lg-9">
 
                 <h4>Programs</h4>
                 <div class="fs-row">
-                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
                         <a href="http://tippie.uiowa.edu/undergraduate/">Undergraduate Programs</a>
                         <a href="http://tippie.uiowa.edu/programs/">Master's Programs</a>
                         <a href="http://tippie.uiowa.edu/mba/">MBA Programs</a>
                         <a href="http://tippie.uiowa.edu/programs/">Certificates</a>
                     </div>
-                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
-                        <a href="http://cimbaitaly.com/mba/">CIMBA Studdy Abroad</a>
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-4">
+                        <a href="http://cimbaitaly.com/mba/">CIMBA Study Abroad</a>
                         <a href="http://tippie.uiowa.edu/executive-education/">Professional & Executive Education</a>
                         <a href="http://www.iowajpec.org/">Entrepreneurship</a>
                         <a href="http://tippie.uiowa.edu/phd/">PhD Programs</a>
@@ -155,13 +155,16 @@
                 </div>
             </div>
 
-            <div class="fs-cell fs-sm-full fs-md-half fs-lg-5 centered">
-                <div class="footer-logo">
-                    <a href="http://tippie.uiowa.edu/"><img src="images/tcob-logo-transp.png" alt="Tippie College of Business"></a>
-                </div>
-            </div>
+            <!--<div class="fs-cell fs-sm-full fs-md-half fs-lg-4 centered">-->
+                <!---->
+                   <!-- -->
+                <!---->
+            <!--</div>-->
 
             <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
+                <!--<div class="footer-logo">-->
+                    <!--<a href="http://tippie.uiowa.edu/"><img src="images/Tippie_logo.png"                                                    alt="Tippie College of Business"></a>-->
+                <!--</div>-->
                 <p class="address">Henry B. Tippie College of Business<br>
                     108 John Pappajohn Business Building<br>
                     Iowa City, IA 52242-1994<br>
