--- a/production/welcome.html
+++ b/production/welcome.html
@@ -102,9 +102,9 @@
                             <li>Application</li>
                             <li>Essays</li>
                             <li>Application Fee</li>
-                            <li>Official GMAT ot GRE Score</li>
+                            <li>Official GMAT or GRE Score</li>
                             <li>Resume</li>
-                            <li>Officil YOEFL or IELTS Score</li>
+                            <li>Official TOEFL or IELTS Score</li>
                             <li>Financial Verification</li>
                             <li>Official Transcripts</li>
                         </ul>
@@ -120,18 +120,18 @@
     <section role="navigation">
 
         <div class="fs-row">
-            <div class="fs-cell fs-sm-full fs-md-full fs-lg-4">
+            <div class="fs-cell fs-sm-full fs-md-full fs-lg-9">
 
                 <h4>Programs</h4>
                 <div class="fs-row">
-                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
                         <a href="http://tippie.uiowa.edu/undergraduate/">Undergraduate Programs</a>
                         <a href="http://tippie.uiowa.edu/programs/">Master's Programs</a>
                         <a href="http://tippie.uiowa.edu/mba/">MBA Programs</a>
                         <a href="http://tippie.uiowa.edu/programs/">Certificates</a>
                     </div>
-                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-half column">
-                        <a href="http://cimbaitaly.com/mba/">CIMBA Studdy Abroad</a>
+                    <div class="fs-cell fs-sm-full fs-md-half fs-lg-4">
+                        <a href="http://cimbaitaly.com/mba/">CIMBA Study Abroad</a>
                         <a href="http://tippie.uiowa.edu/executive-education/">Professional & Executive Education</a>
                         <a href="http://www.iowajpec.org/">Entrepreneurship</a>
                         <a href="http://tippie.uiowa.edu/phd/">PhD Programs</a>
@@ -139,13 +139,16 @@
                 </div>
             </div>
 
-            <div class="fs-cell fs-sm-full fs-md-half fs-lg-5 centered">
-                <div class="footer-logo">
-                    <a href="http://tippie.uiowa.edu/"><img src="images/tcob-logo-transp.png" alt="Tippie College of Business"></a>
-                </div>
-            </div>
+            <!--<div class="fs-cell fs-sm-full fs-md-half fs-lg-4 centered">-->
+                <!---->
+                   <!-- -->
+                <!---->
+            <!--</div>-->
 
             <div class="fs-cell fs-sm-full fs-md-half fs-lg-3">
+                <!--<div class="footer-logo">-->
+                    <!--<a href="http://tippie.uiowa.edu/"><img src="images/Tippie_logo.png"                                                    alt="Tippie College of Business"></a>-->
+                <!--</div>-->
                 <p class="address">Henry B. Tippie College of Business<br>
                     108 John Pappajohn Business Building<br>
                     Iowa City, IA 52242-1994<br>
